--- a/Mattresses.html
+++ b/Mattresses.html
@@ -1,10 +1,21 @@
 <html>
-    <head>
-        <title>Mattresses</title>
-        </head>
-      <body>
+<head>
+<style>
+.page {
+    width: 794px;   /* A4 width */
+    height: 1123px; /* A4 height */
+    margin: auto;
+    padding: 20px;
+    background: white;
+    border: 1px solid #ccc;
+}
+</style>
+</head>
+<body>
+
+<div class="page">
     
-             <img src="https://m.media-amazon.com/images/I/41aoF04z82L._SS100_.jpg" width="200" height="200">
+    <p><img src="https://m.media-amazon.com/images/I/41aoF04z82L._SS100_.jpg" width="200" height="200">
            <img src="https://m.media-amazon.com/images/I/41+jx3LD95L._SS100_.jpg" width="200" height="200">
           <img src="https://m.media-amazon.com/images/I/51DJLTn6paL._SS100_.jpg" width="200" height="200">
         <h6>Folding Mattress, Foldable, Lightweight, Travel, Outdoor Camping, Cotton, Portable Mattress, Floor Sleeping Mat for Sleeping Soft Foam Slim Mattress for Single Bed (72"X36"X2") (Grey)</h6>
@@ -31,5 +42,8 @@
         <h6> Cloth Fusion 600 GSM Mattress Topper Single Bed, Extra Thick 2" Bed Topper Single Bed for Improved Sleep Quality and Enhanced Comfort</h6>
       <hr></hr>
 
-      </body>
-      </html>
+    </p>
+</div>
+
+</body>
+</html>
