--- a/Furnishings.html
+++ b/Furnishings.html
@@ -1,9 +1,21 @@
 <html>
-    <head>
-         <title> Furnishings </title>
-    </head>
- <body>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7U-pqBjabm2TpfwFjaa-6I8UfdU89Wy0w3g&s" width="300" height="200">
+<head>
+<style>
+.page {
+    width: 794px;   /* A4 width */
+    height: 1123px; /* A4 height */
+    margin: auto;
+    padding: 20px;
+    background: white;
+    border: 1px solid #ccc;
+}
+</style>
+</head>
+<body>
+
+<div class="page">
+   
+    <p> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7U-pqBjabm2TpfwFjaa-6I8UfdU89Wy0w3g&s" width="300" height="200">
        <h6>Furniture & Home furnishings</h6>
       <hr></hr>
 
@@ -26,7 +38,23 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7ppO7UdCryjGDC7lf-7enikcbP-u5LHbTWg&s" width="300" height="200">
        <h6> Premium Studio Decore  </h6>
       <hr></hr>
+</p>
+</div>
+
+</body>
+</html>
 
 
-  </body>
-</html>       
+
+
+
+
+
+
+
+
+
+
+
+
+
