--- a/Furniture.html
+++ b/Furniture.html
@@ -1,8 +1,21 @@
 <html>
-    <head>
-        <title>Furniture</title>
-      <body>
-        <img src="https://m.media-amazon.com/images/I/41Lze07e5JL.jpg" width="200" height="200" >
+<head>
+<style>
+.page {
+    width: 794px;   /* A4 width */
+    height: 1123px; /* A4 height */
+    margin: auto;
+    padding: 20px;
+    background: white;
+    border: 1px solid #ccc;
+}
+</style>
+</head>
+<body>
+
+<div class="page">
+   
+    <p><img src="https://m.media-amazon.com/images/I/41Lze07e5JL.jpg" width="200" height="200" >
       <h6>Bolton Queen Bed with Box Storage</h6>
        <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQNkGqBz3DkEOihaIva9zvQF8iNoaWhulqF09LtckEJ9vRaPFZP5q1rU7S8521xhQEE8Ig1VsXeJ_yecr7JiJ251HJ2tWCvC_0xh_osGoeJ "  width="200" height="200"> 
        <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcQ9_LytstHAMnFVIXqc9CsB3nKyV2ul8Po32ZUccJ1MyLMH4NpiZegM4JN4-FErP3CdndfUyEETsbgcvWS6-g_EvMpEbSTsFqBDUGXuulQ" width="200" height="200">
@@ -22,8 +35,8 @@
   <img src="https://www.insaraf.com/cdn/shop/products/14_optimized_5e804d78-04e5-4986-8afc-e641c8fca292_900x.png?v=1656917262" width="200" height="200">
  <img src="https://www.insaraf.com/cdn/shop/products/DSC1148_2048x.jpg?v=1561016779" width="200" height="200">
 <h6>Solid Wood Furniture Online , Buy Beds Online Queen (5ft Wide x 6.5 ft Long - Inner Size) </h6>
- <hr></hr>
- 
+ <hr></hr></p>
+</div>
 
 </body>
-       </html>
+</html>
