--- a/index.html
+++ b/index.html
@@ -3,6 +3,30 @@
     <title> manish furniture</title>
 </head>
 <style>
+
+{ 
+      margin: 0; 
+      font-family: Arial; 
+      padding: 16px;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+    }
+    img {
+      width: 100%;
+      height: auto;
+    }
+    .btn {
+      display: inline-block;
+      padding: 10px 16px;
+      background: #007bff;
+      color: #fff;
+      border-radius: 8px;
+      text-decoration: none;
+      margin-top: 10px;
+    }
+
 .page {
     width: 794px;   /* A4 width */
     height: 1123px; /* A4 height */
@@ -23,10 +47,10 @@
            <marquee> Welcome to Manish Furniture's Products & Service's </marquee>
       <hr> </hr>
     
-    <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSwrUrQ4DhTIKdBGTc8ClmsNikBjQEDbTSm2Mz8zTOs8enTPpI_-MgbVoRQN3FjuXZOOGgBF6zjIO483pVEWv-8OO5mq7wsyy_Dx5SwATA7d-2lS8gtBB0ZliG0U-DVnTslBAcHVDQ=s1360-w1360-h1020-rw" width="250" height="200">  
-    <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSz-siT6aDiFalqmjYWeIV32mwxyGgPFezXZHhGCwwjCuQRFOgdLrtMrr0QAG0FS9KTV7ITFcrKVGfdr13ycS7oMSYZrVh8BzfI1EWQNpzO_XwGokBv2lOfNyEBSJ1PtIbmHZBpQsA=s1360-w1360-h1020-rw" width="250" height="200">
-    <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSxiy2PizAwX07hwS2-Ldvtd0z84qSZNox3XyvT71DuzMoLbZZJjk2Hn_pfouUovxSEalO1tabSq5LswGhSZ2TgWI_QioMWThLdQ71Zr5WhO6D_WBG7wrhaSA5ToOt0XTiEgS4ZsVw=s1360-w1360-h1020-rw" width="200" height="200">
-    <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSx7OIr9s2IB1iuIVaEWfNScPoM6xFUzPCPN6qLIsLmOZ_4uNa1q1ry0aiMGEgsI6tgdJWK_7XwBjI_7fFZi3ZoA3mV2ndkVRZmLZnEn_jsyNemHtg0VRjokawyDKi2dXFWD3bWhlw=s1360-w1360-h1020-rw" width="190" height="200">
+    <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSwrUrQ4DhTIKdBGTc8ClmsNikBjQEDbTSm2Mz8zTOs8enTPpI_-MgbVoRQN3FjuXZOOGgBF6zjIO483pVEWv-8OO5mq7wsyy_Dx5SwATA7d-2lS8gtBB0ZliG0U-DVnTslBAcHVDQ=s1360-w1360-h1020-rw" width="100" height="100">  <hr></hr>
+    <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSz-siT6aDiFalqmjYWeIV32mwxyGgPFezXZHhGCwwjCuQRFOgdLrtMrr0QAG0FS9KTV7ITFcrKVGfdr13ycS7oMSYZrVh8BzfI1EWQNpzO_XwGokBv2lOfNyEBSJ1PtIbmHZBpQsA=s1360-w1360-h1020-rw" width="100" height="100">  <hr></hr>
+    <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSxiy2PizAwX07hwS2-Ldvtd0z84qSZNox3XyvT71DuzMoLbZZJjk2Hn_pfouUovxSEalO1tabSq5LswGhSZ2TgWI_QioMWThLdQ71Zr5WhO6D_WBG7wrhaSA5ToOt0XTiEgS4ZsVw=s1360-w1360-h1020-rw" width="100" height="100">  <hr></hr>
+    <img src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSx7OIr9s2IB1iuIVaEWfNScPoM6xFUzPCPN6qLIsLmOZ_4uNa1q1ry0aiMGEgsI6tgdJWK_7XwBjI_7fFZi3ZoA3mV2ndkVRZmLZnEn_jsyNemHtg0VRjokawyDKi2dXFWD3bWhlw=s1360-w1360-h1020-rw" width="100" height="100">  <hr></hr>
     
     <hr></hr>  
     <p>MANISH FURNITURE'S, Established in 2011 at Indore in Madhya Pradesh, is a leading<br> Manufacturer, Supplier, Trading Company, Wholesaler of Dining Room Furniture in India.<br> MANISH FURNITURE'S is one of Trade India's verified and trusted sellers of listed products.<br> With extensive experience in supplying and trading Wooden Carved Dining Table, MANISH FURNITURE'S has made <br>a reputed name for itself in the market with high-quality Antique Dining Chair, Antique Dining Table, Large Sizes Dining Table, etc. <br> Focusing on a customer-centric approach, MANISH FURNITURE'S has a pan-India presence and caters to a huge consumer base throughout the country.<br> Buy Dining Room Furniture in bulk from MANISH FURNITURE'S at Trade India quality-assured products.</p>
